--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Thaynara, te amo bb <3 </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Continuo te amando bb</title>
+</head>
+<body>
+    <p>Olha esse título, eita kk :heart: </p>
+</body>
+</html>
