--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="./SRC/CSS/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap');
+    </style>
+    <title>P1.PR4D0</title>
 </head>
 <body>
-    
+    <header class="menu">
+        <div class="title">
+            <a href="./index.html">P1.PR4D0</a>
+        </div>
+
+        <div class="links">
+            <div class="products">
+                <a href="./SRC/HTML/products.html">Produtos</a>
+            </div>
+            <div class="about">
+                <a href="./SRC/HTML/about.html">Quem Somos</a>
+            </div>
+        </div>
+    </header>
+
+
+    <section class="">
+    </section>
 </body>
 </html>
