--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap');
     </style>
+    <link rel="shortcut icon" type="imagex/png" href="./SRC/IMG/logo-1.ico" class="icon">
     <title>P1.PR4D0</title>
 </head>
 <body>
