Insert Bootstrap Edição de menu Reestruturação de projeto

--- a/SRC/HTML/error.html
+++ b/SRC/HTML/error.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./SRC/CSS/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap');
+    </style>
+    <link rel="shortcut icon" type="imagex/png" href="./SRC/IMG/logo-1.ico" class="icon">
+    <link rel="stylesheet" href="./SRC/bootstrap-5.3.2-dist/css/bootstrap.css">
+    <script src="./SRC/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
+    <title>P1.PR4D0</title>
 </head>
 <body>
-    
+    <header class="menu">
+        <div class="title">
+            <a href="./index.html">P1.PR4D0</a>
+        </div>
+
+        <div class="links">
+            <div class="products">
+                <a href="./SRC/HTML/products.html">Produtos</a>
+            </div>
+            <div class="about">
+                <a href="./SRC/HTML/about.html">Quem Somos</a>
+            </div>
+        </div>
+    </header>
+
+
+    <section class="">
+    </section>
 </body>
 </html>
