--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap');
     </style>
     <link rel="shortcut icon" type="imagex/png" href="./SRC/IMG/logo-1.ico" class="icon">
-    <title>P1.PR4D0</title>
+    <link rel="stylesheet" href="./SRC/bootstrap-5.3.2-dist/css/bootstrap.css">
+    <script src="./SRC/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
+    <title>P1.ST0R3 | Home</title>
 </head>
 <body>
     <header class="menu">
         <div class="title">
-            <a href="./index.html">P1.PR4D0</a>
+            <a href="./index.html" class="select">P1.ST0R3</a>
         </div>
 
         <div class="links">
