Reestruturação do projeto e remake do menu

--- a/SRC/HTML/products.html
+++ b/SRC/HTML/products.html
@@ -23,8 +23,15 @@
                 <a href="../HTML/products.html" class="select">Produtos</a>
             </div>
             <div class="about">
-                <a href="../HTML/about.html" >Quem Somos</a>
+                <a href="../HTML/contact.html">Contato</a>
             </div>
+            <div class="about">
+                <a href="../HTML/partner.html">Faça Parte</a>
+            </div>
+        </div>
+
+        <div class="login">
+            <a href="../HTML/login.html">Login >></a>
         </div>
     </header>
 
