--- a/SRC/HTML/contact.html
+++ b/SRC/HTML/contact.html
@@ -3,35 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./SRC/CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap');
     </style>
     <link rel="shortcut icon" type="imagex/png" href="./SRC/IMG/logo-1.ico" class="icon">
-    <link rel="stylesheet" href="./SRC/bootstrap-5.3.2-dist/css/bootstrap.css">
-    <script src="./SRC/bootstrap-5.3.2-dist/js/bootstrap.js"></script>
-    <title>P1.ST0R3 | Home</title>
+    <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.css">
+    <script src="../bootstrap-5.3.2-dist/js/bootstrap.js"></script>
+    <title>P1.ST0R3 | Sobre Nós</title>
 </head>
 <body>
     <header class="menu">
         <div class="title">
-            <a href="./index.html" class="select">P1.ST0R3</a>
+            <a href="../../index.html">P1.ST0R3</a>
         </div>
 
         <div class="links">
             <div class="products">
-                <a href="./SRC/HTML/products.html">Produtos</a>
+                <a href="../HTML/products.html">Produtos</a>
             </div>
             <div class="about">
-                <a href="./SRC/HTML/contact.html">Contato</a>
+                <a href="../HTML/contact.html" class="select">Contato</a>
             </div>
             <div class="about">
-                <a href="./SRC/HTML/partner.html" >Faça Parte</a>
+                <a href="../HTML/partner.html">Faça Parte</a>
             </div>
         </div>
 
         <div class="login">
-            <a href="./SRC/HTML/login.html">Login >></a>
+            <a href="../HTML/login.html">Login >></a>
         </div>
     </header>
 
