--- a/SRC/HTML/login.html
+++ b/SRC/HTML/login.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" type="imagex/png" href="./SRC/IMG/logo-1.ico" class="icon">
     <link rel="stylesheet" href="../bootstrap-5.3.2-dist/css/bootstrap.css">
     <script src="../bootstrap-5.3.2-dist/js/bootstrap.js"></script>
-    <title>P1.ST0R3 | Sobre Nós</title>
+    <title>P1.ST0R3 | Produtos</title>
 </head>
 <body>
     <header class="menu">
@@ -23,8 +23,15 @@
                 <a href="../HTML/products.html">Produtos</a>
             </div>
             <div class="about">
-                <a href="../HTML/about.html" class="select">Quem Somos</a>
+                <a href="../HTML/contact.html">Contato</a>
             </div>
+            <div class="about">
+                <a href="../HTML/partner.html">Faça Parte</a>
+            </div>
+        </div>
+
+        <div class="login" class="select">
+            <a href="../HTML/login.html" class="select">Login >></a>
         </div>
     </header>
 
